# wordprofile

./: .dir-locals.el  .dockerignore  .flake8rc  .gitignore  .gitlab-ci.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  Makefile  Pipfile  README.TXT  README.md  compose.prod.yml  compose.yml  create_database.py  docker-compose-test.yml  docker-compose.yml  init_database.py  insert_doc_mongodb.py  make_parses.sh  make_wp.py  make_wp.sh  parse_doc.py  parse_doc_mongodb.py  pyproject.toml  requirements-api.txt  requirements-build.txt  requirements-dev.txt  requirements.txt  run_server.py  setup.cfg  setup.py  update_moko_database.py  update_mwe_database.py  update_parses.sh  vis.py  wp.py  wp_server.py
.github/workflows/: ci.yml  release-please.yml  test.yml
apps/: cmp_api.py  rest_api.py  xmlrpc_api.py
apps/templates/: index.html
cli/: cmp_wp.py  compute_statistics.py  extract_collocations.py  make_wp.py  parse_doc.py  parse_doc_fs.py  parse_doc_mongodb.py  vis.py  wp.py
cli/utils/: mwe_hit.py  mwe_rel.py  rel.py
docs/wp_cmp_eval/: token_freqs.csv  wp_-gmod_cmp.txt  wp_-obj_cmp.txt  wp_-pred_cmp.txt  wp_adv_cmp.txt  wp_all.txt  wp_attr_cmp.txt  wp_gmod_cmp.txt  wp_kom_cmp.txt  wp_kon_cmp.txt  wp_obj_cmp.txt  wp_pp_cmp.txt  wp_pred_cmp.txt  wp_vz_cmp.txt
mycorpus/: make_dradio.sh
preprocessing/: README.md  annotate_deprel.py
preprocessing/cli/: annotate_deprel.py  tabs2conllu.py
preprocessing/pytabs/: consts.py  folia.py  parser.py  tabs.py  (+1 more)
query/: create_database.py  create_database_new.py  update_hit_database.py  update_moko_database.py  update_mwe_database.py  wp_cmp_client.py  wp_hit_client.py  wp_info_client.py  wp_mwe_free_client.py  wp_mwe_rel_client.py  wp_rel_client.py  wp_server.py  wp_server_legacy.py  wp_server_new.py  wp_status_client.py
requirements/: api.in  api.txt  base.in  base.txt  build.in  build.txt  dev.in  dev.txt
scripts/: parse.py  push-images-to-zdl
spec/: config.json  config.toml  dradio.local.spec  lemma_repair_adjektiv.csv  lemma_repair_verb.csv  lex_variations.csv
test-data/: pnn-sample-corpus.conll
tests/: integration_test.py  integrations_test.py  test_annotate.py  test_annotate_deprel.py  test_connector.py  test_data_update.py  test_datatypes.py  test_db.py  test_extract.py  test_formatter.py  test_prepare.py  test_processing.py  test_sentence_filter.py  test_tabs2conllu.py  test_wp.py  test_xmlrpc_api.py  wp_cmp.py  wp_cmp_client.py  wp_hit.py  wp_hit_client.py  wp_info.py  wp_mwe_free_client.py  wp_mwe_rel_client.py  wp_rel.py  wp_rel_client.py  wp_status.py
wordprofile/: annotate.py  colloc.py  config.py  conllu.py  datatypes.py  db.py  ddc.py  extract.py  formatter.py  parsing.py  polspeech.py  sentence_filter.py  utils.py  wp.py  zdl.py
(+100 files in other folders)
