[metadata]
name = wordprofile
author = "René Knaebel"

[options]
packages = find:

[options.packages.find]
exclude =
    tests
python_requires = >=3.7

[options.extras_require]
pre =
  Click
pre-folia =
  FoLiA
  FoLiA-tools
  bagit
  coloredlogs


[options.entry_points]
console_scripts =
    tabs2conllu = preprocessing.pytabs.cli.tabs2conllu:main

[flake8]
max_line_length=132

[tool.pytest]
