[metadata]
name = wordprofile
author = "René Knaebel"
version = file: scripts/VERSION

[options]
packages = find:

[options.packages.find]
exclude =
    tests
python_requires = >=3.7

[options.extras_require]
pre =
  Click
  typing-extensions

[flake8]
max_line_length=132


[mypy]
ignore_missing_imports = true
files = preprocessing/
